theme switcher development

--- a/common/after_header.html
+++ b/common/after_header.html
@@ -1,5 +1,13 @@
-<div>
-    <h1 class="hello-world">
-        ***Default text***
-    </h1>
-</div>
+<body>
+    <div>
+        <h1 class="hello-world">
+            ***Default text***
+        </h1>
+    </div>
+    <div class="toggle">
+        <input type="checkbox" id="toggle">
+        <span>Normal</span>
+        <label for="toggle"></label>
+        <span>Dark</span>
+      </div>
+</body>
