theme toggle switcher development

--- a/common/after_header.html
+++ b/common/after_header.html
@@ -1,13 +1,8 @@
-<body>
+
     <div>
         <h1 class="hello-world">
             ***Default text***
         </h1>
     </div>
-    <div class="toggle">
-        <input type="checkbox" id="toggle">
-        <span>Normal</span>
-        <label for="toggle"></label>
-        <span>Dark</span>
-      </div>
-</body>
+
+    <button id="demo-btn">DEMO BUTTON</button>
