theme color scheme switcher development

--- a/common/header.html
+++ b/common/header.html
@@ -1,7 +1,4 @@
-
-    <p>This example uses the addEventListener() method to attach a "click" event to a p element.</p>
-
-    <p id="demo">Click me.</p>
+    <p style="position: relative; top: 40px;" id="demo">CLICK ME</p>
     
     <script>
     document.getElementById("demo").addEventListener("click", myFunction);
