--- a/common/header.html
+++ b/common/header.html
@@ -1,9 +1,9 @@
 <div id="switcher-container">
 <p class="themes" id="default-theme">
-    Light
+    WCAG Light
 </p>
 <p class="themes" id="dark-theme">
-    Night Mode
+    WCAG Dark
 </p>
 <p class="themes" id="blue-theme">
     Shades of Blue
@@ -27,20 +27,20 @@
       "header_primary"];
 
       default_theme = [
-      "222222",
+      "000000",
       "ffffff",
-      "0088cc",
-      "e45735",
+      "3369FF",
+      "3369FF",
       "ffffff",
-      "333333"];
+      "000000"];
 
     dark_theme = [
-        "dddddd", 
-    "222222", 
-    "0f82af", 
-    "c14924", 
-    "111111", 
-    "dddddd"];
+        "ffffff", 
+    "0c0c0c", 
+    "759AFF", 
+    "759AFF", 
+    "000000", 
+    "ffffff"];
 
     blue_theme = [
         "203243", 
